<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>racecar_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lali3401@usherbrooke.ca">clocal</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>controller_manager</depend>
  <depend>ros2_controllers</depend>
  <depend>ros2_control</depend>
  <depend>joy</depend>
  <depend>ros_gz</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
